--- a/client/public/index.html
+++ b/client/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Little Lambs | Nursery</title>
+    <title>Little Lambs Nursery | Best Nursery in Al Mankhool,Dubai</title>
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-251012992-1"></script>
 <script>
