--- a/client/public/index.html
+++ b/client/public/index.html
@@ -35,7 +35,19 @@
   gtag('config', 'UA-251012992-1');
   gtag('config', 'G-DRMZC7SZK5');
 </script>
+    
+<script>    
+<meta name="twitter:card" content="summary
+large image" />
+<meta name="twitter:site" content="Little Lambs Nursery" />
+<meta name="twitter:creator" content="Little Lambs Nursery" />
+<meta property="og:url" content="https://www.nurserylittlelambs.com/" />
 
+<meta property="og:title" content="Little Lambs Nursery | Best Nursery in Al Mankhool, Dubai" />
+
+<meta property="og:description" content="Little Lambs Nursery LLC is a well-recommended preschool & daycare centre for early childhood learning and a secure environment in Mankhool, Dubai. Enroll now!” />
+<metaproperty="og:image"content="https://www.nurserylittlelambs.com/static/media/logo.da83167e5538e10e6c23.webp”/>
+    
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
