--- a/client/public/index.html
+++ b/client/public/index.html
@@ -47,6 +47,7 @@ large image" />
 
 <meta property="og:description" content="Little Lambs Nursery LLC is a well-recommended preschool & daycare centre for early childhood learning and a secure environment in Mankhool, Dubai. Enroll now!” />
 <metaproperty="og:image"content="https://www.nurserylittlelambs.com/static/media/logo.da83167e5538e10e6c23.webp”/>
+  </script>
     
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
