--- a/admin/public/index.html
+++ b/admin/public/index.html
@@ -24,6 +24,7 @@
 
   gtag('config', 'UA-251012992-1');
   gtag('config', 'G-DRMZC7SZK5');
+  gtag('config', 'AW-11084316064');
 </script>
 
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
