--- a/client/public/index.html
+++ b/client/public/index.html
@@ -55,11 +55,12 @@
   ""description"": ""Little Lambs Nursery LLC is a well-recommended preschool & daycare centre for early childhood learning and a secure environment in Mankhool, Dubai.""
  ""sameAs"" : [ ""https://www.linkedin.com/company/nursery-little-lambs/"",
                 ""https://www.facebook.com/nurserylittlelambs"",
-                ""https://twitter.com/nursery_lambs"",]
+                ""https://twitter.com/nursery_lambs"",
+                ""https://www.instagram.com/littlelambsnurserydubai/"" ]
   ""address"": {
     ""@type"": ""PostalAddress"",
-    ""Street Address"": ""33rd Street. Near Mankhool Park/ ADCB Metro Statio"",
-    ""State"": ""Unite"",
+    ""Street Address"": ""33rd Street. Near Mankhool Park/ ADCB Metro Station"",
+    ""State"": ""Dubai"",
     ""Country"": ""United Arab Emirates""
     ""Phone Number"": ""+971 524438743”
 
