--- a/client/public/index.html
+++ b/client/public/index.html
@@ -46,28 +46,28 @@
 /></noscript>
 <!-- End Meta Pixel Code -->
     
-   <script type=""application/ld+json"">
+   <!-- <script type="application/ld+json">
 {
-  ""@context"" : ""http://schema.org"",
-  ""@type"" : ""Organization"",
-  ""name"" : ""Little Lambs Nursery"",
- ""url"" : ""https://www.nurserylittlelambs.com/"",
- ""logo"": ""https://www.nurserylittlelambs.com/static/media/logo.da83167e5538e10e6c23.webp"",
-  ""description"": ""Little Lambs Nursery LLC is a well-recommended preschool & daycare centre for early childhood learning and a secure environment in Mankhool, Dubai.""
- ""sameAs"" : [ ""https://www.linkedin.com/company/nursery-little-lambs/"",
-                ""https://www.facebook.com/nurserylittlelambs"",
-                ""https://twitter.com/nursery_lambs"",
-                ""https://www.instagram.com/littlelambsnurserydubai/"" ]
-  ""address"": {
-    ""@type"": ""PostalAddress"",
-    ""Street Address"": ""33rd Street. Near Mankhool Park/ ADCB Metro Station"",
-    ""State"": ""Dubai"",
-    ""Country"": ""United Arab Emirates""
-    ""Phone Number"": ""+971 524438743”
+  "@context" : "http://schema.org",
+  "@type" : "Organization",
+  "name" : "Little Lambs Nursery",
+ "url" : "https://www.nurserylittlelambs.com/",
+ "logo": "https://www.nurserylittlelambs.com/static/media/logo.da83167e5538e10e6c23.webp",
+  "description": "Little Lambs Nursery LLC is a well-recommended preschool & daycare centre for early childhood learning and a secure environment in Mankhool, Dubai."
+ "sameAs" : ["https://www.linkedin.com/company/nursery-little-lambs/",
+                "https://www.facebook.com/nurserylittlelambs",
+                "https://twitter.com/nursery_lambs",
+                "https://www.instagram.com/littlelambsnurserydubai/"]
+"address": {
+    "@type"": ""PostalAddress",
+    "Street Address": "33rd Street. Near Mankhool Park/ ADCB Metro Station",
+    "State": "Dubai",
+    "Country": "United Arab Emirates"
+    "Phone Number": "+971 524438743"
 
   }
 }
-</script> 
+</script>  -->
  
     <meta
       name="twitter:card"
