Schema mark up insertion

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -68,6 +68,42 @@
   }
 }
 </script>  -->
+<script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "ChildCare",
+    "name": "Little Lambs Nursery",
+    "image": "https://www.nurserylittlelambs.com/static/media/logo.da83167e5538e10e6c23.webp",
+    "@id": "",
+    "url": "https://www.nurserylittlelambs.com/",
+    "telephone": "+971 524438743",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "Villa No. 22 33rd St - Al Mankhool",
+      "addressLocality": "Dubai",
+      "postalCode": "",
+      "addressCountry": "AE"
+    },
+    "geo": {
+      "@type": "GeoCoordinates",
+      "latitude": 25.24588674068406,
+      "longitude": 55.29471212634395
+    },
+    "openingHoursSpecification": {
+      "@type": "OpeningHoursSpecification",
+      "dayOfWeek": [
+        "Monday",
+        "Tuesday",
+        "Wednesday",
+        "Thursday",
+        "Friday",
+        "Saturday"
+      ],
+      "opens": "07:00",
+      "closes": "18:00"
+    } 
+  }
+  </script>
  
     <meta
       name="twitter:card"
